--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -91,15 +91,42 @@
 }
 
 
-.main-container {
-  border: 3px solid #fff;
+.main-container {  
   padding: 20px;
 }
+.title {
+  color: white;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-size: 2.0em;
+  font-weight: 600;
+  line-height: 1.6;
+  padding-left: .5em;
+  margin-bottom: .5em;
+  background: #2867A1;
+}
 
+.content-text {
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-bottom: 1em;
+  color:  #2867A1;
+}
+
+.content-sub-text {
+  font-size: 2.0rem;
+  line-height: 1.3;
+  color:  #2867A1;
+  padding-left: 1.0em;
+}
 .sub-container {
   width: 50%;
   float: left;
-  padding: 20px;
+  padding: 40px;
+  margin-top: 30px;
+  background: white;
+  height: 400px;
+  border: 8px solid #2867A1;
 }
  
 .token-table{
@@ -122,5 +149,6 @@
   padding-top: 1.0rem;
 }
 .li-style:nth-child(even){
-  background: #fddbdb;
+  background: #2867A1;
+  color: white;
 }
