--- a/lib/banking_sandbox_web/templates/layout/live.html.leex
+++ b/lib/banking_sandbox_web/templates/layout/live.html.leex
@@ -1,4 +1,4 @@
-<main role="main" class="container">
+<main role="main" class="container" style="background-color:#2867A1; height:500px; border:0; padding:0">
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
