--- a/lib/banking_sandbox_web/live/page_live.html.leex
+++ b/lib/banking_sandbox_web/live/page_live.html.leex
@@ -1,48 +1,24 @@
-<section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>Peace-of-mind from prototype to production</p>
-
-  <form phx-change="suggest" phx-submit="search">
-    <input type="text" name="q" value="<%= @query %>" placeholder="Live dependency search" list="results" autocomplete="off"/>
-    <datalist id="results">
-      <%= for {app, _vsn} <- @results do %>
-        <option value="<%= app %>"><%= app %></option>
-      <% end %>
-    </datalist>
-    <button type="submit" phx-disable-with="Searching...">Go to Hexdocs</button>
-  </form>
-</section>
-
-<section class="row">
-  <article class="column">
-    <h2>Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.5/CHANGELOG.md">v1.5 Changelog</a>
-      </li>
+    <div class="main-container">
+    <div class="sub-container">
+      <div class="title">
+          Live Bank Server
+      </div>
+      <div class="content-text">Customers: <%= @customers %></div>
+      <div class="content-text">Accounts: <%= @accounts %></div>
+      <div class="content-text">Transactions: <%= elem(@transactions,0) + elem(@transactions,1) %>
+        <div class="content-sub-text">Credit: <%= elem(@transactions,0) %> </div>
+        <div class="content-sub-text">Debit: <%= elem(@transactions,1) %> </div>
+        </div>
+    </div>
+    <div class="sub-container">
+    <div class="title">
+            Tokens
+    </div>
+    <div class="token-table"> 
+    <ul class="ul-style">
+    <%= for token <- @tokens do %>
+        <li class="li-style"> <%= token %> </li>
+    <% end %>
     </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-    </ul>
-  </article>
-</section>
+    </div>
+    </div>
